--- a/VivenciaDaInfo/package.json
+++ b/VivenciaDaInfo/package.json
@@ -20,7 +20,9 @@
     "eslint": "^8.21.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.0",
+    "node-sass": "^7.0.1",
     "prettier": "^2.7.1",
+    "sass-loader": "^13.0.2",
     "vite": "^3.0.4",
     "vitest": "^0.21.0"
   }
