alteração no código

--- a/VivenciaDaInfo/package.json
+++ b/VivenciaDaInfo/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "g": "^2.0.1",
     "pinia": "^2.0.17",
+    "surge": "^0.23.1",
     "vue": "^3.2.37"
   },
   "devDependencies": {
